# churchcamera

./: .gitignore  HOWTO.md  PRODUCT REQUIREMENTS DOCUMENT.md  README.md  System Architecture Doc.md  Tech Stack Document.md  package-lock.json  package.json  server.mjs
OBS-Plugin-for-WEBRTC/: CMakeLists.txt  README.md
OBS-Plugin-for-WEBRTC/src/: WebRTCSource.cpp  WebRTCSource.h  plugin-main.cpp
android-webcam-bridge/: README.md  gradle.properties  problems.md  settings.gradle.kts
android-webcam-bridge/app/: build.gradle.kts
android-webcam-bridge/app/src/main/: AndroidManifest.xml
android-webcam-bridge/app/src/main/java/com/raphael/androidwebcambridge/: MainActivity.kt
android-webcam-bridge/app/src/main/java/com/raphael/androidwebcambridge/bridge/: BridgeHtmlAssets.kt  BridgeModels.kt  BridgeViewModel.kt  CameraSessionController.kt  LocalBridgeServer.kt  NetworkUtils.kt  RelayManager.kt  WebRtcManager.kt
android-webcam-bridge/app/src/main/java/com/raphael/androidwebcambridge/ui/: CameraScreen.kt
android-webcam-bridge/app/src/main/java/com/raphael/androidwebcambridge/ui/components/: BottomStrip.kt  FocusRail.kt  InfoOverlay.kt  OverlayControl.kt  TopStrip.kt  (+4 more)
android-webcam-bridge/app/src/main/res/values/: strings.xml
android-webcam-bridge/app/src/main/res/values-night/: themes.xml
android-webcam-bridge/app/src/main/res/xml/: network_security_config.xml
obs-relay/: HOWTO.md  README.md  REGISTER_SNIPPET.md  package-lock.json  package.json  relay.js
obs-relay/admin/: index.html
public/: desk.html  desk.js  phone.html  phone.js  shared.js  styles.css
(+1 files in other folders)
